# first-test-assignment-KutuevaNataliia

./: CMakeLists.txt  README.md  main.c  main_test.c  run_tests.sh  sort.h
.github/: mergify.yml
.github/classroom/: autograding.json
.github/workflows/: classroom.yml
additional_test/: CMakeLists.txt  test_additional.c
scripts/: run_tests.sh
src/: CMakeLists.txt  main.c  sort.h  sort.s
test/: CMakeLists.txt  test_main.c
