



add_executable(main main.c sort.s sort.h)
#target_link_libraries(main ${CMOCKA_LIBRARY})
#add_definitions(-include /home/gleb/CLionProjects/tests/src/redefinition.h)

#add_executable(../test ../test/main_test.c main.c ../sort.s ../sort.h ../redefinition.h)
#
#target_link_libraries(../test ${CMOCKA_LIBRARY})
#
#set_target_properties(../test
#        PROPERTIES
#        COMPILE_DEFINITIONS
#        UNIT_TESTING)

